--- a/documentation/asciidoc/backend-in-memory.adoc
+++ b/documentation/asciidoc/backend-in-memory.adoc
@@ -3,7 +3,7 @@
 
 [abstract]
 --
-This section describes the in-memory backend for CAPS.
+This section describes the in-memory backend for Morpheus.
 --
 
 // TODO: Document the in-memory backend, possibly together with or instead of session and catalog.
