--- a/documentation/asciidoc/backend-neo4j-graph-merge.adoc
+++ b/documentation/asciidoc/backend-neo4j-graph-merge.adoc
@@ -1,7 +1,7 @@
 [[backend-neo4j-graph-merge]]
 = Neo4j GraphMerge utility
 
-CAPS includes a utility class, called `Neo4jGraphMerge`, that allows to merge a graph into an existing Neo4j database.
+Morpheus includes a utility class, called `Neo4jGraphMerge`, that allows to merge a graph into an existing Neo4j database.
 This can be useful in order to frequently update a Neo4j database with additional data that has been produced from other data sources.
 
 [[neo4j-graph-merge-element-keys]]
