--- a/documentation/asciidoc/index.adoc
+++ b/documentation/asciidoc/index.adoc
@@ -1,19 +1,19 @@
-[[caps]]
-= Cypher for Apache Spark
+[[morpheus]]
+= Morpheus: Cypher for Apache Spark
 
 [abstract]
 --
-This part provides comprehensive documentation for Cypher for Apache Spark.
+This part provides comprehensive documentation for Morpheus, Cypher for Apache Spark.
 --
 
-The Cypher for Apache Spark part of the Morpheus user guide covers the following areas:
+This part of the Morpheus user guide covers the following areas:
 
-* <<caps-overview>> -- Overview of CAPS components: Property Graph Data Source backends and Cypher.
-* <<caps-introduction>> -- Introduction with examples to CAPS concepts and APIs.
-* <<backends>> -- Detailed documentation of the CAPS Session and the various CAPS backends.
-* <<cypher>> -- Features and limitations of the Cypher graph query language as implemented in CAPS.
+* <<morpheus-overview>> -- Overview of Morpheus components: Property Graph Data Source backends and Cypher.
+* <<morpheus-introduction>> -- Introduction with examples to Morpheus concepts and APIs.
+* <<backends>> -- Detailed documentation of the Morpheus Session and the various Morpheus backends.
+* <<cypher>> -- Features and limitations of the Cypher graph query language as implemented in Morpheus.
 * <<performance>> -- Notes on caching and performance.
-* <<architecture>> -- Notes on CAPS architecture and technology choices.
+* <<architecture>> -- Notes on Morpheus architecture and technology choices.
 * <<resources>> -- Resources for further reading.
 * <<examples>> -- A collection of example programs with explanations.
 
